--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
   },
   "scripts": {
